# HOPYBOX

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Error_pt.py  LICENSE  LICENSE.py  README.md  SECURITY.md  __init__.py  __main__.py  calculate.py  connect.py  filetool.py  headers.py  helps.py  ho_error.py  ho_logs.py  main.py  prompt.py  pyproject.toml  setup.py  system.py  timetool.py  translate.py  tree.py  update.py  version.py
.github/workflows/: .readthedocs.yaml  codeql.yml
HOPYBOX/: LICENSE.py  __init__.py  __main__.py  basedtool.py  caculate.py  calculate.py  check.py  cipher.py  clear.py  command.py  connect.py  copyright.py  device.py  dirtree.py  download.py  filetool.py  filetoolbox.py  fps.py  headers.py  helps.py  hopter.py  ipway.py  mail.py  path.py  prompt.py  qqget.py  scan.py  sdemail.py  system.py  timetool.py  timetoolbox.py  totp.py  translate.py  tree.py  tree_dir.py  update.py  urlget.py  version.py  weather.py
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/source/: conf.py  index.rst
hopybox/: LICENSE.py  __init__.py  __main__.py  ai.py  calculate.py  cipher.py  command.py  connect.py  device.py  filetool.py  headers.py  mail.py  prompt.py  timetool.py  totp.py  translate.py  tree.py  update.py
