[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HOPYBOX"
version = "1.9.6"
authors = [{name = "HOStudio123",email = "hostudio.hopybox@foxmail.com"}]
license = {text = "GPL-3.0 license"}
description = "An open-source and practical command box."
keywords = ["hopybox", "box", "ho", "py", "command", "terminal", "tool"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "bs4",
    "sympy",
    "pyotp>=2.9.0",
    "requests",
    "rich>=13.0.0",
    "psutil>=5.8.0",
    "prompt_toolkit>=3.0.0",
    "cryptography>=41.0.0"
]    

[project.urls]
Homepage = "https://github.com/HOStudio123/HOPYBOX"
Issues = "https://github.com/HOStudio123/HOPYBOX/issues"

[project.scripts]
hopybox = "hopybox.__main__:start"